# labs

./: .gitignore
lab2/: CMakeLists.txt  main.cpp
lab2/include/: Archer.hpp  Attacker.hpp  Building.hpp  Fort.hpp  GameObject.hpp  MobileHouse.hpp  Moveable.hpp  Unit.hpp
lab2/src/: Archer.cpp  Building.cpp  Fort.cpp  GameObject.cpp  MobileHouse.cpp  Unit.cpp
lab3/: Abstract Factory.cpp  Builder.cpp  Factory Method.cpp  Singleton.cpp
lab4/: Iterator.cpp  ResponsibilityChain.cpp  Strategy.cpp
lab5/: Adapter.cpp  Bridge.cpp  Proxy.cpp
